--- a/main.css
+++ b/main.css
@@ -21,6 +21,8 @@ main {
 #title-input {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    border: 1px solid #000;
+    outline: none;
     padding: 1rem;
     border-radius: 0.50rem;
 }
