Add no-note status

--- a/main.css
+++ b/main.css
@@ -108,6 +108,8 @@ main {
 
 #saved-notes {
     margin-right: 2rem;
+    display: flex;
+    flex-direction: column;
     min-width: 274px;
     margin-top: 3rem;
 }
